--- a/hgt.org
+++ b/hgt.org
@@ -1520,8 +1520,33 @@ gdalbuildvrt ../gd_2017.vrt *.tif
 #+RESULTS:
 : 0...10...20...30...40...50...60...70...80...90...100 - done.
 
+****** get lidar extents
+#+begin_src R
+
+  dir <- "~/hgt_data/madison_lidar_2017_heights/normalized/"
+        fs <-   list.files(dir,
+                   pattern = ".las",
+                   full.names = F)
+
+    es <-     lapply(fs, function(f) {
+        e <- extent(readLAS(paste0(dir, f), select = "", filter = "-keep_every_nth 100"))
+        a <- as(e, "SpatialPolygons")
+        a <- SpatialPolygonsDataFrame(a, data.frame(tile = f))
+        return(a)
+    })
+
+  p <- do.call("rbind", es)
+  shapefile(p, "~/hgt_data/madison_lidar_2017_heights/normalized/lidar_extents.shp")
+
+#+end_src
+
+#+RESULTS:
+: 
+: Error in rgdal::writeOGR(x, filename, layer, driver = "ESRI Shapefile",  : 
+:   Layer creation failed
+
 **** make tree buffer shapefile, excluding neighbors that are too close with a lower DBH.  Note: trees with no dbh are dropped.
- #+begin_src R
+#+begin_src R
    library(raster)
    library(rgeos)
    library(dplyr)
@@ -1644,7 +1669,7 @@ library(stringr)
 [[file:figs/test_heights.png]]
 
 
-*
+
 *** extract lidar clouds within tree buffers 
 ***** 2017
  #+begin_src R
@@ -1859,19 +1884,21 @@ library(stringr)
 
 **** TODO extract height and estimate bias for trees
 
-
-plan [2019-11-07 Thu]:
+plan [2019-11-08 Fri]:
 
 Some of the difference in maximum height will be due to the randomness
 of the sampling and due to the difference in the sample size across
 years. This creates a bias in maximum height estimates. To estimate
-the bias due to these factors, I bootstrapped the lidar point clouds.
-I assume that for 2 adjacent collection years (i.e. 2017 and 2016;
-2016 and 2009; 2009 and 2005) that they come from the same collection.
-That is, all the points were acquired at the same time and that there
-was no growth.  I assume footprint size is the same and all other
+the bias due to these factors, I selected trees with negligible growth
+and I bootstrapped the lidar point clouds.  I assume that the points
+all come from a single lidar collection over a tree tree.  That is,
+all the points were acquired at the same time and that there was no
+growth.  I assume footprint size is the same and all other
 characteristics of the points are the same, the only difference is
 that the number of pulses between years.
+
+I select trees that haven't grown
+
 
 I will then sample from the combined lidar clouds, new clouds for each
 year of the same size as the original data.  For example, if there
@@ -1933,27 +1960,8 @@ points.  But less important if averaging across many treees.
 
 
 
-#+begin_src R
-  library(ggthemes)
-      terk <- list(theme_solarized_2(base_size = 16) +
-                   theme(legend.title = element_text(size = 10),
-                         legend.text = element_text(size = 8),
-                         axis.ticks = element_line(size = .3),
-                         rect = element_rect(fill = "transparent"),
-                         panel.background = element_rect(fill = "transparent"),
-                         panel.grid.major = element_line(color = "#839496", size = .1),
-                         panel.grid.minor = element_line(color = "#839496", size = .05)))
 
-  base1 <- "#93a1a1"
-  blue <- scale_color_solarized("blue")
-
-  red <- solarized_pal("red")(1)
-
-#+end_src
-
-#+RESULTS:
-
-
+***** original extraction of heights and bias correction
 #+begin_src R
   library(raster)
   library(dplyr)
@@ -2017,9 +2025,6 @@ points.  But less important if averaging across many treees.
   uids_df <- left_join(uids_df, uids2009)
   uids_df <- left_join(uids_df, uids2005)
 
-
-
-                                          # I wrote the code below to handle missing cases, but I'm going to filter out to just the complete cases (observations for every year).
 
   uids_df <- uids_df[complete.cases(uids_df),]
 
@@ -2110,18 +2115,21 @@ points.  But less important if averaging across many treees.
   }
   closeAllConnections()
 
+saveRDS(out, "/home/erker/hgt_data/madison_tree_inventories/hgt/extracted_heights_bias.rds")
 
 #+end_src
 
-or read in the data from the saved
 
+
+
+***** plotting the original bias correction method
 #+begin_src R
-
-  saveRDS(out, "/home/erker/hgt_data/madison_tree_inventories/hgt/extracted_heights_bias.rds")
-
-
-  h <- out
-
+library(lidR)
+library(dplyr)
+library(ggplot2)
+library(stringr)
+library(tidyr)
+h <-   readRDS("/home/erker/hgt_data/madison_tree_inventories/hgt/extracted_heights_bias.rds")
 #+end_src
 
 #+RESULTS:
@@ -2157,38 +2165,24 @@ head(arrange(h, desc(n2017)))
 #+end_example
 
 #+begin_src R
-  library(lidR)
-  lst16124 <- readLAS("/home/erker/hgt_data/madison_tree_inventories/hgt/trees_2017_las/ST16124_1065.las")
-  plot(lst16124)
+  library(ggthemes)
+      terk <- list(theme_solarized_2(base_size = 16) +
+                   theme(legend.title = element_text(size = 10),
+                         legend.text = element_text(size = 8),
+                         axis.ticks = element_line(size = .3),
+                         rect = element_rect(fill = "transparent"),
+                         panel.background = element_rect(fill = "transparent"),
+                         panel.grid.major = element_line(color = "#839496", size = .1),
+                         panel.grid.minor = element_line(color = "#839496", size = .05)))
 
-  lst31236 <- readLAS("/home/erker/hgt_data/madison_tree_inventories/hgt/trees_2017_las/ST31236_0920.las")
-  plot(lst31236)
+  base1 <- "#93a1a1"
+  blue <- scale_color_solarized("blue")
 
-  lst17111 <- readLAS("/home/erker/hgt_data/madison_tree_inventories/hgt/trees_2017_las/ST17111_0823.las")
-  plot(lst17111)
+  red <- solarized_pal("red")(1)
 
 #+end_src
 
 #+RESULTS:
-
-
-
-#+begin_src R :exports results :results graphics :file figs/heights_lidar_extract.png :width 700 :height 500
-library(ggplot2)
-    library(tidyr)
-  n <- 10
-
-      d <- h %>%
-          select(emp_max2017, emp_max2016, emp_max2009, emp_max2005, uid) %>%
-        sample_n(n) %>%
-        gather(year, height, -uid) %>%
-        mutate(year = as.numeric(str_extract(year, "[0-9]{4}")))
-
-  ggplot(d, aes(x = year, y = height, group = uid)) + geom_line()
-#+end_src
-
-#+RESULTS:
-[[file:figs/heights_lidar_extract.png]]
 
 
 correct heights and add bias uncertainty
@@ -2233,7 +2227,7 @@ On average, I'd say that this correction looks pretty good!
 #+begin_src R :exports results :results graphics :file figs/correction.png :width 1300 :height 800 :bg transparent :res 100
 
   n <- 40
-  set.seed(2)
+  set.seed(6)
   uids <- sample(unique(hc$uid), n)
   hcf <- filter(hc, uid %in% uids)
 
@@ -2252,6 +2246,23 @@ On average, I'd say that this correction looks pretty good!
 #+RESULTS:
 [[file:figs/correction.png]]
 
+#+begin_src R :exports results :results graphics :file figs/correction_st14603.png :width 300 :height 200 :bg transparent :res 100
+  hcf <- filter(hc, uid == "ST14603")
+
+    ggplot(data = hcf) + 
+        geom_line(aes(y = emp_height, x = year, group = uid), color = base1) +
+        geom_line(aes(y = cor_height, x = year, group = uid), color = red) +
+        geom_linerange(aes(ymax = cor_height + 1.96 * sdbias, ymin = cor_height - 1.96 *sdbias, x = year), color = red) + 
+#        facet_wrap(~uid, ncol = 1) +
+        terk +
+        scale_x_continuous(breaks = c(2005, 2009, 2017)) 
+
+
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/correction_st14603.png]]
 
 #+begin_src R :exports results :results graphics :file figs/correction_st16209.png :width 300 :height 200 :bg transparent :res 100
   hcf <- filter(hc, uid == "ST16209")
@@ -2400,37 +2411,355 @@ saveRDS(hn, "/home/erker/hgt_data/madison_tree_inventories/hgt/lidarextractedhei
 join growth rates to trees
 
 #+begin_src R
-library(raster)
-trees <- shapefile("/home/erker/hgt_data/madison_tree_inventories/MadisonTrees_WithAttributes.shp")
+  library(raster)
+  trees <- shapefile("/home/erker/hgt_data/madison_tree_inventories/MadisonTrees_WithAttributes.shp")
 
+  hn <- readRDS("/home/erker/hgt_data/madison_tree_inventories/hgt/lidarextractedheights_growthrates.rds")
 
+  trees@data <- left_join(trees@data, hn, by = c("UID" = "uid"))
 
-#+end_src
+  shapefile(trees, "/home/erker/hgt_data/madison_tree_inventories/MadisonTrees_Withlidarextractedheights_growthrates.rds")
 
-
-
-
-
-
-
-
-
-
-???
-
-#+begin_src R
-library(lme4)
-
-m1 <- lmer(cor_height ~ year + (1 | uid), data = hc, weights = 1/ sdbias^2)
 #+end_src
 
 #+RESULTS:
 
 
+***** revised bias correction (only trees that have stopped growing)
+Revised way of doing bias with just trees already almost at their
+maximum height by species.
+
+Becuse there are potentially issues with the trees that are still
+growing.  See TS00189 and ts01030: are they over corrected?
+
+Goal is to get a bias correction for every species for every size
+point cloud.
+
+Also standard deviation?  for uncertainty.  
+
+Here i'm saying that a tree that hasn't grown can be used to find by
+how much the different lidar point densitys underestimate height.
+
+
+****** read in extracted heights from above and find trees that haven't grown
+
+there is a bit of circularity here so I need to be smart about how I
+select which trees haven't grown.
+
+They could be the largest trees for each species......
+
+this is only going to work for large genera.
+
+#+begin_src R
+    library(dplyr)
+  trees <- shapefile("/home/erker/hgt_data/madison_tree_inventories/MadisonTrees_WithAttributes.shp")
+
+  h <-   readRDS("/home/erker/hgt_data/madison_tree_inventories/hgt/extracted_heights_bias.rds")
+
+  h <- left_join(h, select(unique(trees@data), UID, Genus), by = c("uid" = "UID")) # use unique because for some reason there are duplicate trees
+
+#+end_src
+
+#+begin_src R :results org
+    library(orgutils)
+    #  h %>%
+     #     filter(emp_max2009 > emp_max2016)
+
+  large.genera <- c("Fraxinus", "Robinia", "Celtis", "Tilia", "Betula", "Gleditsia", 
+"Acer", "Picea", "Pinus", "Populus", "Juglans",
+"Ulmus", "Thuja", "Quercus", "Abies", "Catalpa", "Salix", 
+"Platanus", "Carya", "Ginkgo", "Gymnocladus")
+
+#number of big trees to use
+nbigtrees <- 40
+      hg <- h %>%
+          filter(Genus %in% large.genera) %>%
+          group_by(Genus) %>%
+          filter(abs(emp_max2017 - emp_max2016) < 1,
+                 abs(emp_max2017 - emp_max2009) < 1,
+                 abs(emp_max2016 - emp_max2009) < 1) %>%
+      top_n(nbigtrees, emp_max2017) %>%
+        arrange(Genus, desc(emp_max2017)) 
+
+
+#    hg %>%  select(Genus, emp_max2017, emp_max2016, emp_max2009, emp_max2005, n2017, n2016, n2009, n2005, uid) %>% data.frame() %>% toOrg
+
+
+#+end_src
+
+****** revised extraction using just the trees identified as not growing above
+
+#+begin_src R
+no.grow.uid <- hg$uid
+#+end_src
+
+#+RESULTS:
+
+#+begin_src R
+    library(raster)
+    library(dplyr)
+    library(stringr)
+    library(foreach)
+    library(doParallel)
+
+    b <- shapefile("/home/erker/hgt_data/madison_tree_inventories/hgt/trees_buf_excludeNearNeigh.shp")
+    b@data <- select(b@data, UID)
+
+
+                                            #uids <- c("ST14603", "ST14604", "ST14599", "ST14547")
+
+    fs2017 <- list.files("/home/erker/hgt_data/madison_tree_inventories/hgt/trees_2017_las/", full.names = F)
+    fs2016 <- list.files("/home/erker/hgt_data/madison_tree_inventories/hgt/trees_2016_las/", full.names = F)
+    fs2009 <- list.files("/home/erker/hgt_data/madison_tree_inventories/hgt/trees_2009_las/", full.names = F)
+    fs2005 <- list.files("/home/erker/hgt_data/madison_tree_inventories/hgt/trees_2005_las/", full.names = F)
+
+                                            #make sure there is only one of each trees
+    uids2017 <- str_extract(fs2017, "^[A-Za-z0-9]+")
+    head(sort(table(uids2017), decreasing = T))
+
+    uids2016 <- str_extract(fs2016, "^[A-Za-z0-9]+")
+    head(sort(table(uids2016), decreasing = T))
+
+    uids2009 <- str_extract(fs2009, "^[A-Za-z0-9]+")
+                                            #head(sort(table(uids2009), decreasing = T), 1800)
+    head(sort(table(uids2009), decreasing = T))
+
+    uids2005 <- str_extract(fs2005, "^[A-Za-z0-9]+")
+    head(sort(table(uids2005), decreasing = T))
+
+                                            # put all the uids and las paths for ecah year in a dataframe to loop through
+
+    uids2017 <- data.frame(str_match(fs2017, "([A-Za-z0-9]+)_.*"), stringsAsFactors = F)
+    colnames(uids2017) <- c("path2017", "uid")
+
+    uids2016 <- data.frame(str_match(fs2016, "([A-Za-z0-9]+)_.*"), stringsAsFactors = F)
+    colnames(uids2016) <- c("path2016", "uid")
+
+    uids2009 <- data.frame(str_match(fs2009, "([A-Za-z0-9]+)_.*"), stringsAsFactors = F)
+    colnames(uids2009) <- c("path2009", "uid")
+                                            # remove duplicates for 2009
+    uids2009 <- uids2009 %>% group_by(uid) %>% summarize(path2009 = path2009[1])
+
+
+    uids2005 <- data.frame(str_match(fs2005, "([A-Za-z0-9]+)_.*"), stringsAsFactors = F)
+    colnames(uids2005) <- c("path2005", "uid")
+
+
+    uids_df <- left_join(uids2017, uids2016)
+    uids_df <- left_join(uids_df, uids2009)
+    uids_df <- left_join(uids_df, uids2005)
+
+
+    uids_df <- uids_df[complete.cases(uids_df),]
+
+  ###################### filter the uids to the ones identified above
+  uids_df <- filter(uids_df, uid %in% no.grow.uid)
 
 
 
+    treelasdir <- "/home/erker/hgt_data/madison_tree_inventories/hgt/"
+    reps <- 1000
 
+    cl <- makeCluster(6)
+    registerDoParallel(cl)
+
+    out <- foreach(i = (1:nrow(uids_df)), .packages = c("stringr","lidR", "rgeos"), .combine = "rbind") %dopar% {  
+
+        path2017 <- paste0(treelasdir, "trees_2017_las/", uids_df$path2017[i])
+        path2016 <- paste0(treelasdir, "trees_2016_las/", uids_df$path2016[i])
+        path2009 <- paste0(treelasdir, "trees_2009_las/", uids_df$path2009[i])
+        path2005 <- paste0(treelasdir, "trees_2005_las/", uids_df$path2005[i])
+
+        l2017 <- readLAS(path2017, select = "")
+        l2017@data$Z <-     l2017@data$Z  * .3048  # convert to meters
+     
+        l2016 <- readLAS(path2016, select = "")
+        l2016@data$Z <-     l2016@data$Z  * .3048  # convert to meters
+     
+        l2009 <- readLAS(path2009, select = "")
+        l2009@data$Z <-     l2009@data$Z  * .3048  # convert to meters
+     
+        l2005 <- readLAS(path2005, select = "")
+        l2005@data$Z <-     l2005@data$Z  * .3048  # convert to meters
+     
+
+        Z <- c(l2017@data$Z, l2016@data$Z, l2009@data$Z, l2005@data$Z)
+        mZ <- max(Z)
+
+        n <- 1:length(Z)
+        bias <- sapply(n, function(n) {replicate(reps, mZ - max(sample(Z, n, replace = T)))})
+
+      
+        mean_bias <- apply(bias, 2, mean)
+        sd_bias <- apply(bias, 2, sd)
+
+
+        res <- data.frame(uid = uids_df[i,"uid"],
+                          maxZ = mZ,
+                          sample_size = n,
+                          mean_bias = mean_bias,
+                          sd_bias = sd_bias,
+                          stringsAsFactors = F)
+
+        saveRDS(res, paste0("/home/erker/hgt_data/madison_tree_inventories/hgt/nogrow_extracted_heights_bias/", uids_df[i,"uid"], ".rds"))
+        return(res)
+
+    }
+    closeAllConnections()
+
+  saveRDS(out, "/home/erker/hgt_data/madison_tree_inventories/hgt/nogrow_extracted_heights_bias.rds")
+
+#+end_src
+
+****** plotting
+#+begin_src R
+        trees <- shapefile("/home/erker/hgt_data/madison_tree_inventories/MadisonTrees_WithAttributes.shp")
+
+      ngh <- readRDS("/home/erker/hgt_data/madison_tree_inventories/hgt/nogrow_extracted_heights_bias.rds")
+      ngh <- left_join(ngh, select(unique(trees@data), UID, Genus), by = c("uid" = "UID")) # use unique because for some reason there are duplicate trees
+
+    # make the bias negative
+    ngh$mean_bias <- -1 * ngh$mean_bias 
+
+  # convert n points to point density
+  ngh$pulse_density <- ngh$sample_size / ((8 * .3048)^2 * pi)
+
+#+end_src
+
+#+RESULTS:
+
+#+begin_src R :exports results :results graphics :file figs/ng_bias.png :width 1000 :bg transparent :res 100 :height 800
+
+  ggplot(ngh, aes(x = pulse_density, y = mean_bias, group = uid, color = Genus, ymin = mean_bias - sd_bias, ymax = mean_bias + sd_bias)) + 
+      geom_line() + 
+      facet_wrap(~Genus) +
+      coord_cartesian(y = c(-5, 0), x = c(0,2)) +
+      terk
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/ng_bias.png]]
+
+#+begin_src R :exports results :results graphics :file figs/ng_bias_focus1.png :width 1000 :bg transparent :res 100 :height 800
+
+  ggplot(ngh, aes(x = pulse_density, y = mean_bias, group = uid, color = Genus, ymin = mean_bias - sd_bias, ymax = mean_bias + sd_bias)) + 
+      #geom_ribbon(color = base1) + 
+      geom_line() + 
+      facet_wrap(~Genus) +
+      coord_cartesian(y = c(-2, 0), x = c(0,2)) +
+      terk
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/ng_bias_focus1.png]]
+
+#+begin_src R :exports results :results graphics :file figs/ng_bias_focus1_commonGenera.png :width 1000 :bg transparent :res 120 :height 800
+  dp <- filter(ngh, Genus %in% c("Acer", "Gleditsia", "Fraxinus"))
+    ggplot(dp, aes(x = pulse_density, y = mean_bias, group = uid, color = Genus, ymin = mean_bias - sd_bias, ymax = mean_bias + sd_bias)) + 
+#        geom_ribbon(color = base1) + 
+        geom_line() + 
+  #      facet_wrap(~Genus) +
+        coord_cartesian(y = c(-2, 0), x = c(0,2)) +
+        scale_color_solarized() +
+        terk 
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/ng_bias_focus1_commonGenera.png]]
+
+#+begin_src R :exports results :results graphics :file figs/ng_bias_focus1_otherGenera1.png :width 1000 :bg transparent :res 120 :height 800
+  dp <- filter(ngh, Genus %in% c("Acer", "Gymnocladus"))
+    ggplot(dp, aes(x = pulse_density, y = mean_bias, group = uid, color = Genus, ymin = mean_bias - sd_bias, ymax = mean_bias + sd_bias)) + 
+#        geom_ribbon(color = base1) + 
+        geom_line() + 
+  #      facet_wrap(~Genus) +
+        coord_cartesian(y = c(-2, 0), x = c(0,2)) +
+        scale_color_solarized() +
+        terk 
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/ng_bias_focus1_otherGenera1.png]]
+
+[[file:figs/ng_bias_focus1_otherGenera1.png]]
+
+#+begin_src R
+  nghs <-   ngh %>% group_by(sample_size, Genus) %>%
+      summarize(mean_mean_bias = mean(mean_bias),
+                se_mean_bias = sd(mean_bias) / (n() - 1),
+                mean_sd_bias = sqrt(mean(sd_bias^2))) %>%
+    mutate(point_density = sample_size / ((8 * .3048)^2 * pi))
+
+
+#+end_src
+
+#+RESULTS:
+
+
+#+begin_src R :exports results :results graphics :file figs/avg_bias_focus1_otherGenera2_.png :bg transparent :width 1000 :res 120
+
+  pd <-  filter(nghs, Genus %in% c("Fraxinus", "Acer", "Gleditsia", "Ginkgo", "Gymnocladus", "Picea", "Pinus", "Quercus", "Platanus", "Populus", "Juglans"))
+
+#  pd2 <-  filter(nghs, !Genus %in% c("Carya", "Salix", "Thuja"), point_density < 1.1, point_density > .9)
+
+p <-     ggplot(pd, aes(x = point_density, y = mean_mean_bias, ymax = mean_mean_bias + 2*se_mean_bias, ymin = mean_mean_bias - 2*se_mean_bias, color = Genus, fill = Genus)) +
+      geom_ribbon(alpha = .2, color = NA) +
+      geom_line() +
+#          coord_cartesian(y = c(0, -5), x = c(0,3)) +
+          coord_cartesian(y = c(-.3, -1), x = c(0.5,1.5)) +
+  #        scale_color_solarized() +
+          terk 
+
+p
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/avg_bias_focus1_otherGenera2_.png]]
+#+begin_src R :exports results :results graphics :file figs/avg_bias_focus1_otherGenera1.pngvg_.png :bg transparent :width 1000 :res 120
+
+
+p <-     ggplot(nghs, aes(x = point_density, y = mean_mean_bias, ymax = mean_mean_bias + 2*se_mean_bias, ymin = mean_mean_bias - 2*se_mean_bias, color = Genus, fill = Genus)) +
+      geom_line() +
+          coord_cartesian(y = c(0, -5), x = c(0,3)) +
+          terk 
+
+p
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/avg_bias_focus1_otherGenera1.pngvg_.png]]
+
+#+begin_src R
+library(plotly)
+ggplotly(p)
+#+end_src
+
+#+RESULTS:
+
+
+Calculate the mean bias for each Genus.  This is the correction that
+I will apply to the data
+#+begin_src R
+nghg <-   ngh %>% 
+      group_by(Genus, sample_size, pulse_density) %>%
+      summarize(bias = mean(mean_bias),
+                sd_bias = mean(sd_bias))
+
+#+end_src
+
+#+RESULTS:
+
+Apply the species specific correction derived from large not growing
+trees to the data.
+#+begin_src R
+
+#+end_src
 **** crop lidar to the tenney oak for visualization of bias situation.
 
 I could make a 2d plot of the points (z on y axis and 
@@ -2473,6 +2802,11 @@ since I'm not interested in the mean, but rather the maximum.
 
 #+end_src
 
+#+RESULTS:
+: 
+: Warning message:
+: There are 0 points flagged 'synthetic'.
+
 #+begin_src R
   library(ggthemes)
 
@@ -2482,8 +2816,8 @@ since I'm not interested in the mean, but rather the maximum.
                        axis.ticks = element_line(size = .3),
                        rect = element_rect(fill = "transparent"),
                        panel.background = element_rect(fill = "transparent"),
-                       panel.grid.major = element_line(color = "#839496", size = .3),
-                       panel.grid.minor = element_line(color = "#839496", size = .1)),
+                       panel.grid.major = element_line(color = "#839496", size = .1),
+                       panel.grid.minor = element_line(color = "#839496", size = .05)),
 blue <- scale_color_solarized("blue"))
 
 red <- solarized_pal("red")(1)
@@ -2525,9 +2859,9 @@ the pulses penetrate deep into the canopy when there aren't leaves.
 
 #+begin_src R :exports results :results graphics :file figs/tenney_oak_crosssection.png :width 1200 :height 300 :res 100 :bg transparent
 
-    xc <- 825410
+#    xc <- 825410
 
-    dc <- filter(d, abs(X - xc) < 8)
+    dc <- filter(d, abs(X - mean(X)) < 8)
     ggplot(dc, aes(x = Y, y = Z, color = factor(year))) +
         geom_point(size = .5) +
         geom_rug(sides = "l") +
@@ -2543,8 +2877,8 @@ the pulses penetrate deep into the canopy when there aren't leaves.
   [[file:figs/tenney_oak_crosssection.png]]
 
   #+begin_src R :exports results :results graphics :file figs/tenney_oak_centerpoints.png :width 800 :height 800 :res 100 :bg transparent
-    yc <- 489580
-    dc <- filter(d, abs(Y - yc) < 8)
+#    yc <- 489580
+    dc <- filter(d, abs(Y - mean(Y)) < 8)
 
     ggplot(dc, aes(x = Y, y = Z, color = factor(year))) +
         geom_point(size = 1) +
@@ -2651,7 +2985,234 @@ max2017 - max2005
 [1] 1.451
 #+end_example
 
+**** crop lidar to a fast growing tree for visualization of bias situation. ST42874
 
+ST42874
+
+
+#+begin_src R
+
+  l2017 <- readLAS("/home/erker/hgt_data/madison_lidar_2017_heights/normalized/0676_esri_normalized.las", select = "r")
+    l2016 <- readLAS("/home/erker/hgt_data/madison_lidar_2016_heights/normalized_lidar/54_normalized.las", select = "r")
+    l2009 <- readLAS("/home/erker/hgt_data/madison_lidar_2009_heights/normalized/lc2t81028f_ground_normalized.las", select = "r")
+    l2005 <- readLAS("/home/erker/hgt_data/madison_lidar_2005_heights/normalized/tile007_ground_normalized.las", select = "r")
+
+
+  p <- shapefile("/home/erker/hgt_data/ST42874.shp")
+
+    o2017 <- lasclip(l2017, p)
+    o2016 <- lasclip(l2016, p)
+    o2009 <- lasclip(l2009, p)
+    o2005 <- lasclip(l2005, p)
+
+  #  plot(o2017)
+   # plot(o2009)
+    #plot(o2005)
+
+    # I should make neat gifs...
+
+
+    d2017 <- o2017@data %>% mutate(year = 2017)
+    d2016 <- o2016@data %>% mutate(year = 2016)
+    d2009 <- o2009@data %>% mutate(year = 2009)
+    d2005 <- o2005@data %>% mutate(year = 2005)
+
+#+end_src
+
+#+begin_src R
+  library(ggthemes)
+
+    terk <- list(theme_solarized_2(base_size = 16) +
+                 theme(legend.title = element_text(size = 10),
+                       legend.text = element_text(size = 8),
+                       axis.ticks = element_line(size = .3),
+                       rect = element_rect(fill = "transparent"),
+                       panel.background = element_rect(fill = "transparent"),
+                       panel.grid.major = element_line(color = "#839496", size = .3),
+                       panel.grid.minor = element_line(color = "#839496", size = .1)),
+blue <- scale_color_solarized("blue"))
+
+red <- solarized_pal("red")(1)
+
+#+end_src
+
+#+RESULTS:
+
+#+begin_src R :exports results :results graphics :file figs/ST42874.png :width 1200 :height 300 :res 100 :bg transparent
+
+        d <- rbind(d2017, d2016, d2009, d2005) %>%
+          mutate(year = factor(year),
+                 height = Z * .3048,
+                 X = X * .3048,
+                 Y = Y * .3048)
+
+
+        ggplot(d, aes(x = X, y = height, color = year)) +
+            geom_point(size = .5) +
+            geom_rug(sides = "l") +
+            coord_equal() +
+            facet_wrap(~year, ncol = 4) +
+          terk +
+          theme(axis.text.x = element_blank())
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/ST42874.png]]
+
+
+**** ST78492 
+78492
+
+ST78492 - smaller honey locust, single street tree.
+
+#+begin_src R
+
+  l2017 <- readLAS("/home/erker/hgt_data/madison_lidar_2017_heights/normalized/0777_esri_normalized.las", select = "r")
+    l2016 <- readLAS("/home/erker/hgt_data/madison_lidar_2016_heights/normalized_lidar/85_normalized.las", select = "r")
+    l2009 <- readLAS("/home/erker/hgt_data/madison_lidar_2009_heights/normalized/lc2t81034f_ground_normalized.las", select = "r")
+    l2005 <- readLAS("/home/erker/hgt_data/madison_lidar_2005_heights/normalized/tile015_ground_normalized.las", select = "r")
+
+
+  p <- shapefile("/home/erker/hgt_data/ST78492.shp")
+
+    o2017 <- lasclip(l2017, p)
+    o2016 <- lasclip(l2016, p)
+    o2009 <- lasclip(l2009, p)
+    o2005 <- lasclip(l2005, p)
+
+  #  plot(o2017)
+   # plot(o2009)
+    #plot(o2005)
+
+    # I should make neat gifs...
+
+
+    d2017 <- o2017@data %>% mutate(year = 2017)
+    d2016 <- o2016@data %>% mutate(year = 2016)
+    d2009 <- o2009@data %>% mutate(year = 2009)
+    d2005 <- o2005@data %>% mutate(year = 2005)
+
+#+end_src
+
+#+begin_src R
+  library(ggthemes)
+
+    terk <- list(theme_solarized_2(base_size = 16) +
+                 theme(legend.title = element_text(size = 10),
+                       legend.text = element_text(size = 8),
+                       axis.ticks = element_line(size = .3),
+                       rect = element_rect(fill = "transparent"),
+                       panel.background = element_rect(fill = "transparent"),
+                       panel.grid.major = element_line(color = "#839496", size = .3),
+                       panel.grid.minor = element_line(color = "#839496", size = .1)),
+blue <- scale_color_solarized("blue"))
+
+red <- solarized_pal("red")(1)
+
+#+end_src
+
+#+RESULTS:
+
+#+begin_src R :exports results :results graphics :file figs/ST78492.png :width 1200 :height 300 :res 100 :bg transparent
+
+        d <- rbind(d2017, d2016, d2009, d2005) %>%
+          mutate(year = factor(year),
+                 height = Z * .3048,
+                 X = X * .3048,
+                 Y = Y * .3048)
+
+
+        ggplot(d, aes(x = X, y = height, color = year)) +
+            geom_point(size = .5) +
+            geom_rug(sides = "l") +
+            coord_equal() +
+            facet_wrap(~year, ncol = 4) +
+          terk +
+          theme(axis.text.x = element_blank())
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/ST78492.png]]
+
+#+begin_src R :exports results :results graphics :file figs/ST78492_slice.png :width 1200 :height 300 :res 100 :bg transparent
+
+  d <- rbind(d2017, d2016, d2009, d2005) %>%
+      mutate(height = Z * .3048,
+             X = X * .3048,
+             Y = Y * .3048) %>%
+  filter(abs(X - 257088) < (8 * .3048)) %>%
+      mutate(year = factor(year))
+
+
+  ggplot(d, aes(x = Y, y = height, color = year)) +
+      geom_point(size = .5) +
+      geom_rug(sides = "l") +
+      coord_equal() +
+  facet_wrap(~year, ncol = 4) +
+      terk +
+      theme(axis.text.x = element_blank())
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/ST78492_slice.png]]
+
+**** ST69002 tree with powerline hole :ATTACH:
+:PROPERTIES:
+:Attachments: IMG_20191018_173331.jpg
+:ID:       9346cc96-17cc-42eb-b67f-10e39b107aa1
+:END:
+#+begin_src R
+
+  l2017 <- readLAS("/home/erker/hgt_data/madison_lidar_2017_heights/normalized/0824_esri_normalized.las", select = "r")
+    l2016 <- readLAS("/home/erker/hgt_data/madison_lidar_2016_heights/normalized_lidar/103_normalized.las", select = "r")
+    l2009 <- readLAS("/home/erker/hgt_data/madison_lidar_2009_heights/normalized/lc2t71007f_ground_normalized.las", select = "r")
+    l2005 <- readLAS("/home/erker/hgt_data/madison_lidar_2005_heights/normalized/tile014_ground_normalized.las", select = "r")
+
+
+  p <- shapefile("/home/erker/hgt_data/ST69002.shp")
+
+    o2017 <- lasclip(l2017, p)
+    o2016 <- lasclip(l2016, p)
+    o2009 <- lasclip(l2009, p)
+    o2005 <- lasclip(l2005, p)
+
+    plot(o2016)
+   # plot(o2009)
+    #plot(o2005)
+
+    # I should make neat gifs...
+
+
+    d2017 <- o2017@data %>% mutate(year = 2017)
+    d2016 <- o2016@data %>% mutate(year = 2016)
+    d2009 <- o2009@data %>% mutate(year = 2009)
+    d2005 <- o2005@data %>% mutate(year = 2005)
+
+#+end_src
+#+begin_src R :exports results :results graphics :file figs/ST69002.png :width 1200 :height 300 :res 100 :bg transparent
+
+        d <- rbind(d2017, d2016, d2009, d2005) %>%
+          mutate(year = factor(year),
+                 height = Z * .3048,
+                 X = X * .3048,
+                 Y = Y * .3048)
+
+
+        ggplot(d, aes(x = X, y = height, color = year)) +
+            geom_point(size = .5) +
+            geom_rug(sides = "l") +
+            coord_equal() +
+            facet_wrap(~year, ncol = 4) +
+          terk +
+          theme(axis.text.x = element_blank())
+
+#+end_src
+
+#+RESULTS:
+[[file:figs/ST69002.png]]
 
 *** the subsampling down to get bias by species could be it's own paper maybe...
 *** I need to think hard about how i'm going to structure this paper.
